convert operator screen

--- a/html/components/igrf-tab/index.html
+++ b/html/components/igrf-tab/index.html
@@ -242,7 +242,7 @@
   </table>
 </div>
 
-<div id="sbTemplates">
+<div class="sbTemplates">
   <div id="RefRoles">
     <option value="">None Selected</option>
     <option value="Head Referee">Head Referee</option>
