--- a/html/components/lt-sheet/index.html
+++ b/html/components/lt-sheet/index.html
@@ -83,7 +83,7 @@
   </div>
 </div>
 
-<div id="sbTemplates">
+<div class="sbTemplates">
   <div id="FieldingEditor" sbContext="^Period(*).Jam(*).TeamJam(*).Fielding(*)">
     <div class="sbSegment">
       <div class="sbGroup sbHeader"><span>Skater</span></div>
