--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -103,7 +103,7 @@
   </div>
 </div>
 
-<div id="sbTemplates">
+<div class="sbTemplates">
   <div id="PenaltyEditor" sbContext="Skater(*).Penalty(*)">
     <div class="sbSegment" sbPrefix="p:[*]">
       <div class="sbGroup" sbContext="^^^">
