--- a/html/components/team-editor/index.html
+++ b/html/components/team-editor/index.html
@@ -129,7 +129,7 @@
   </table>
 </div>
 
-<div id="sbTemplates">
+<div class="sbTemplates">
   <div id="StoreTeamDialog" class="sbSegment">
     <div class="sbGroup">
       <span>Merge into: </span>
