--- a/html/styles/common.css
+++ b/html/styles/common.css
@@ -33,9 +33,13 @@ div.sbSheets { height: calc(100% - 10px); align-items: flex-start; flex-wrap: wr
 .sbSheets .hasAnnotation { position: relative; background-clip: padding-box; } 
 .sbSheets .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; } 
 
+.sbNoDetract { font-size: 75%; }
+.sbNoDetract .ui-button { padding: .7em; }
+.sbActive.sbNoDetract, .ui-button.sbActive.sbNoDetract, .ui-button:hover.sbActive.sbNoDetract { background: #0c0; color: #000; }
+
 .sbInvisible { visibility: hidden; }
 .sbHide, .sbSpinner.sbHide, .sbGroup.sbHide { display: none; } 
-#sbTemplates { display: none; }
+.sbTemplates { display: none; }
 
 [sbSheetStyle="sk"] .sbShowBySheetStyle:not(.sbShowOnSk) { display: none; }
 [sbSheetStyle="pt"] .sbShowBySheetStyle:not(.sbShowOnPt):not(.sbShowOnPurePt) { display: none; }
