--- a/html/components/sk-input/index.html
+++ b/html/components/sk-input/index.html
@@ -64,7 +64,7 @@
     <button
       class="sbKeyControl"
       sbAttr="id:-:'Team[Team]Timeout'"
-      sbClass="sbActive: Id,^TimeoutOwner, ^OfficialReview: skiIsToThisTeam"
+      sbClass="sbActive: Id,^TimeoutOwner, ^OfficialReview: sbIsToThisTeam"
       sbSet="Timeout"
     >
       Team TO
@@ -73,7 +73,7 @@
     <button
       class="sbKeyControl"
       sbAttr="id:-:'Team[Team]OfficialReview'"
-      sbClass="sbActive: Id,^TimeoutOwner, ^OfficialReview: skiIsOrThisTeam"
+      sbClass="sbActive: Id,^TimeoutOwner, ^OfficialReview: sbIsOrThisTeam"
       sbSet="OfficialReview"
     >
       Off Review
