--- a/html/components/sbo-input/index.html
+++ b/html/components/sbo-input/index.html
@@ -390,7 +390,7 @@
             <span sbClass="sbHide: Running" sbDisplay="^^Clock(Period).Time: sbToLongTime"></span>
           </td>
           <td>
-            <select sbControl="Review, Owner: sbToToTypeValue: sbFromToTypeVal">
+            <select sbControl="Review, Owner: sbToToTypeVal: sbFromToTypeVal">
               <option value=".false">Untyped Timeout</option>
               <option value="O.false">Official Timeout</option>
               <option
