--- a/html/components/sk-input/index.html
+++ b/html/components/sk-input/index.html
@@ -107,8 +107,9 @@
           ?
         </button>
         <button
-          sbForeach="Skater:: rosterNumber: resort=RosterNumber"
-          sbAttr="rosterNumber: RosterNumber | id: -: skiToJammerId"
+          class="sbKeyControl"
+          sbForeach="Skater:: rosterNumber: resort=RosterNumber,onInsert=skiSetupKey"
+          sbAttr="rosterNumber: RosterNumber | id: -: 'Team[Team]Jammer[Skater]'"
           sbDisplay="RosterNumber"
           sbClass="sbActive: p.Skater: === elem.attr('Skater') | HasPlayed: Color: === 'Jammer' | sbHide: Role: === 'NotInGame'"
           sbSet="p.Skater: elem.attr('Skater')"
@@ -132,8 +133,9 @@
           ?
         </button>
         <button
-          sbForeach="Skater:: rosterNumber: resort=RosterNumber"
-          sbAttr="rosterNumber: RosterNumber | id: -: skiToPivotId"
+          class="sbKeyControl"
+          sbForeach="Skater:: rosterNumber: resort=RosterNumber,onInsert=skiSetupKey"
+          sbAttr="rosterNumber: RosterNumber | id: -: 'Team[Team]Pivot[Skater]'"
           sbDisplay="RosterNumber"
           sbClass="sbActive: p.Skater: === elem.attr('Skater') | HasPlayed: Color: === 'Pivot' | sbHide: Role: === 'NotInGame'"
           sbSet="p.Skater: elem.attr('Skater')"
