update to jquery 3.7.1; jquery-ui 1.13.2 remove unused JS externals

--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -135,7 +135,7 @@
                   class="ColumnWidth GraphBlock"
                   sbForeach="Jam"
                   sbClass="Lead: TeamJam(2).Lead | Lost: TeamJam(2).Lost"
-                  sbCss="height: TeamJam(2).JamScore: toPpjColumnHeight | width: ScoreBoard.CurrentGame.Clock(Jam).Number: toPpjColumnWidth | background: t(2).Color(overlay.bg)"
+                  sbCss="height: TeamJam(2).JamScore: v * 4 + 'px' | width: ScoreBoard.CurrentGame.Clock(Jam).Number: ovlToPpjColumnWidth | background: t(2).Color(overlay.bg)"
                 >
                   <div class="JammerStar ColumnWidth"></div>
                   <div class="Points ColumnWidth" sbDisplay="TeamJam(2).JamScore"></div>
