--- a/html/settings/sb_data/index.css
+++ b/html/settings/sb_data/index.css
@@ -9,3 +9,5 @@
 #sbData .Type th .ui-button { font-size: 50%; } 
 #sbData tr.Selected button.Select { background: #3f3; } 
 #sbData button.Delete:disabled { color: #bbb; } 
+#sbData .Name { text-align: left; }
+#sbData span.Name { padding-left: 5px; }
