use css variables; tune design

--- a/html/components/game-advance/index.css
+++ b/html/components/game-advance/index.css
@@ -1,1 +1,1 @@
-#GameAdvance { font-size: 300%;  text-align: center; padding: 5px; margin-bottom: 2px; font-weight: bold; } 
+#GameAdvance { text-align: center; padding: 5px; } 
