--- a/html/components/game-advance/index.html
+++ b/html/components/game-advance/index.html
@@ -1,3 +1,8 @@
-<div id="GameAdvance" class="sbSegment sbClickMe sbHide" sbClass="sbHide: /ScoreBoard.CurrentGame.Game: === '[game]'" sbCall="advanceGame">
+<div
+  id="GameAdvance"
+  class="sbSegment sbClickMe sbHide sbVeryVeryImportant"
+  sbClass="sbHide: /ScoreBoard.CurrentGame.Game: === '[game]'"
+  sbCall="advanceGame"
+>
   Go To Current Game
 </div>
