--- a/html/components/ruleset-tab/index.html
+++ b/html/components/ruleset-tab/index.html
@@ -31,7 +31,7 @@
   <table class="sbGroup rules" sbContext="/ScoreBoard.Rulesets">
     <tbody sbForeach="RuleDefinition:: rsCompareChildIndex: part=1, noContext" class="section folded">
       <tr>
-        <th colspan="2" class="sbHeader header" sbCall="rsTriggerFold" sbDisplay="-: rsSectionName"></th>
+        <th colspan="2" class="sbSubHeader header" sbCall="rsTriggerFold" sbDisplay="-: rsSectionName"></th>
       </tr>
       <tr></tr>
       <tr
