--- a/html/components/sbo-input/index.css
+++ b/html/components/sbo-input/index.css
@@ -1,28 +1,26 @@
 #Operator .Faded>:not(.JamControl) { opacity: 0.2; }
 #Operator .NoBorder { border: none; }
 
-#Operator>.MetaControl>.LastGroup { border-bottom-left-radius: 12px; border-bottom-right-radius: 12px; }
+#Operator>.MetaControl>.LastGroup { border-bottom-left-radius: var(--segment-corner-radius); border-bottom-right-radius: var(--segment-corner-radius); }
 
-#Operator>.JamControl button:not(.Smaller) { font-size: 130%; } 
-#Operator>.JamControl>.ReplaceInfo.sbHide + .sbGroup { border-top-left-radius: 12px; border-top-right-radius: 12px; }
+#Operator>.JamControl { font-size: var(--imprtant-font-size); } 
+#Operator>.JamControl>.ReplaceInfo.sbHide + .sbGroup { border-top-left-radius: var(--segment-corner-radius); border-top-right-radius: var(--segment-corner-radius); }
 
-#Operator .ClockControl .Value {font-size: 150%; font-weight: bold; }
-#Operator .ClockControl .Time .Value {font-size: 200%; }
-#Operator .ClockControl .Name.Running { background: #3f3; } 
-#Operator .ClockControl[Clock="Jam"] .Name.InJam { background: #3f3; } 
-#Operator .ClockControl .Name.Running.NoMoreJam { background: #f33; } 
+#Operator .ClockControl .Name.Running { background-color: var(--element-active-bg); color: var(--element-active-fg); } 
+#Operator .ClockControl[Clock="Jam"] .Name.InJam { background-color: var(--element-active-bg); color: var(--element-active-fg); } 
+#Operator .ClockControl .Name.Running.NoMoreJam { background: #d33; color: #fff; } 
 #Operator .ClockControl:not([Clock="Period"]):not([Clock="Jam"]) .InvertedTime { display: none; }
-#Operator .ClockControl .Name .InvertedTime { padding-left: 5px; font-size: 90%; } 
+#Operator .ClockControl .Name .InvertedTime { padding-left: .5em; font-size: .9rem; } 
 #Operator .ClockControl .Name .InvertedTime:before { content: "("; } 
 #Operator .ClockControl .Name .InvertedTime.CountDown:after { content: " elapsed)"; } 
 #Operator .ClockControl .Name .InvertedTime:not(.CountDown):after { content: " remaining)"; } 
 
 #Operator .Adjustments .AdjAmount { font-weight: bold; }
 
-#NewGameDialog button.MidGame { font-size: 80%; }
+#NewGameDialog button.MidGame { font-size: var(--nodetract-font-size); }
 
 #ClockDialog .Label { font-style: normal; }
-#ClockDialog .TimeControls { display: grid; grid: auto auto / 1fr 1fr 1fr; gap: 0.5em; }
+#ClockDialog .TimeControls { display: grid; grid: auto auto / 1fr 1fr 1fr; gap: var(--element-gap); }
 
 #JamDialog tr.isRunning .ifNotRunning { display: none; }
 #JamDialog tr:not(.isRunning) .ifRunning { display: none; }
