--- a/html/components/settings-tab/index.css
+++ b/html/components/settings-tab/index.css
@@ -1,8 +1,8 @@
 #ScoreBoardSettings.UsePreview div.View { display: none; } 
 #ScoreBoardSettings:not(.UsePreview) div.Preview { display: none; } 
 
-#ScoreBoardSettings .ScoreBoardOptions { flex-wrap: wrap; gap: 0.5em; }
-#ScoreBoardSettings .DisplayOptions { display: grid; grid: auto auto auto / 1fr 1fr 1fr 1fr; gap: 0.5em; }
+#ScoreBoardSettings .ScoreBoardOptions { flex-wrap: wrap; gap: var(--element-gap); }
+#ScoreBoardSettings .DisplayOptions { display: grid; grid: auto auto auto / 1fr 1fr 1fr 1fr; gap: var(--element-gap); }
 #ScoreBoardSettings div.Preview { border-top: none; }
 
 #ScoreBoardSettings .ViewFrames iframe { max-width: 50%; height: 300px; }
