--- a/html/external/jquery-ui/jquery-ui.theme.css
+++ b/html/external/jquery-ui/jquery-ui.theme.css
@@ -15,35 +15,32 @@
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Arial,sans-serif;
-	font-size: 1.1em;
-}
-.ui-widget .ui-widget {
+	font-family: 'LiberationSans',sans-serif;
 	font-size: 1em;
 }
 .ui-widget input,
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Arial,sans-serif;
+	font-family: 'LiberationSans',sans-serif;
 	font-size: 1em;
 }
 .ui-widget.ui-widget-content {
-	border: 1px solid #d8dcdf;
+	border: 1px solid #444;
 }
 .ui-widget-content {
 	border: 1px solid #eeeeee;
-	background: #ffffff;
-	color: #333333;
+	background: var(--outside-bg);
+	color: var(--outside-fg);
 }
 .ui-widget-content a {
 	color: #333333;
 }
 .ui-widget-header {
-	border: 1px solid #e3a1a1;
-	background: #cc0000 url("images/ui-bg_highlight-soft_15_cc0000_1x100.png") 50% 50% repeat-x;
-	color: #ffffff;
-	font-weight: bold;
+	border: var(--header-border);
+	background: var(--header-bg);
+	color: var(--header-fg);
+	font-weight: var(--header-font-weight);
 }
 .ui-widget-header a {
 	color: #ffffff;
@@ -60,10 +57,10 @@
 works properly when clicked or hovered */
 html .ui-button.ui-state-disabled:hover,
 html .ui-button.ui-state-disabled:active {
-	border: 1px solid #d8dcdf;
-	background: #eeeeee url("images/ui-bg_highlight-hard_100_eeeeee_1x100.png") 50% 50% repeat-x;
-	font-weight: bold;
-	color: #004276;
+	border: var(--button-border);
+	background: var(--button-bg);
+	font-weight: var(--button-font-weight);
+	color: var(--button-fg);
 }
 .ui-state-default a,
 .ui-state-default a:link,
@@ -83,10 +80,10 @@ a:visited.ui-button,
 .ui-widget-header .ui-state-focus,
 .ui-button:hover,
 .ui-button:focus {
-	border: 1px solid #cdd5da;
-	background: #f6f6f6 url("images/ui-bg_highlight-hard_100_f6f6f6_1x100.png") 50% 50% repeat-x;
-	font-weight: bold;
-	color: #111111;
+	border: var(--button-hover-border);
+	background: var(--button-hover-bg);
+	font-weight: var(--button-font-weight);
+	color: var(--button-hover-fg);
 }
 .ui-state-hover a,
 .ui-state-hover a:hover,
@@ -98,7 +95,7 @@ a:visited.ui-button,
 .ui-state-focus a:visited,
 a.ui-button:hover,
 a.ui-button:focus {
-	color: #111111;
+	color: var(--button-hover-fg);
 	text-decoration: none;
 }
 
@@ -180,7 +177,7 @@ a.ui-button:active,
 .ui-widget-header .ui-state-disabled {
 	opacity: .35;
 	-ms-filter: "alpha(opacity=35)"; /* support: IE8 */
-	background-image: none;
+	background: #eee;
 }
 .ui-state-disabled .ui-icon {
 	-ms-filter: "alpha(opacity=35)"; /* support: IE8 - See #6059 */
